rabbit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: management
    port: 15672
    targetPort: 15672
    protocol: TCP
  - name: amqp
    port: 5672
    targetPort: 5672
    protocol: TCP
